--- a/2010.6.8Mafia_game+java/DreamWare/AndroidManifest.xml
+++ b/2010.6.8Mafia_game+java/DreamWare/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="SocketServer" >
         <activity
-            android:name=".SoketChat"
+            android:name=".DreamWare"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SoketChat"></activity>
         <activity android:name=".ChatServerThread"></activity>
          <activity android:name=".ChatServer"></activity>
        
